swagger: Working editable declarative comments formatting
