# models/listModel.go
@@ -9,9 +9,12 @@ import "gorm.io/gorm"
 */
 
 type List struct {
-	ID         uint   `gorm:"primaryKey;autoIncrement;"`
 	gorm.Model        // https://gorm.io/docs/models.html
 	Title      string `gorm:"not null;size:255;"`
 	Order      int    `gorm:"not null;index:,sort:asc,type:btree"`
 	Tasks      []Task `gorm:"foreignKey:ListID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
+}
+
+type SwaggerList struct {
+	List []List `json:"list"`
 }
